# psia-udp-sender-receiver

./: .gitignore  README.md  flake.nix
assets/: text_file.txt
docs/: protocol.md
nix/: shell.nix
receiver/: CMakeLists.txt  logger.h  main.c  packet.c  packet.h  receiver.c  receiver.h  sender.c  sender.h  utils.c  utils.h
sender/: connection.c  connection.h  main.c  main.h  packet.c  packet.h  transmission.c  transmission.h  utils.c  utils.h
